--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECT=mongodb+srv://noelnoelme:c5QkAqSacXaIeUbP@cluster0.mrr4fcj.mongodb.net/ExecutiveYuanNews-Reader?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECT=mongodb+srv://reader-project:eRdGssLZwJcycanX@cluster0.mrr4fcj.mongodb.net/ExecutiveYuanNews-Reader?retryWrites=true&w=majority&appName=Cluster0
 GOOGLE_CLIENT_ID=請使用自己的google_client_id
 GOOGLE_CLIENT_SECRET=請使用自己的secret
 SECRET=THISISROCEXECUTIVEYUANNEWSREADER
